src/components/sidenav-main/sidenav-main.component.scss
sidenav-main {
  #menuTopPanel {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #28778d;
    @media screen and (orientation: portrait) {
      height: 21%;
    }
    @media screen and (orientation: landscape) {
      height: 42%;
    }
    @media screen and (min-width: 1024px) {
      @media screen and (orientation: portrait) {
        height: 10%;
      }
      @media screen and (orientation: landscape) {
        height: 15%;
      }
    }
    .photoDiv {
      border-radius: 999px;
      border: 3px solid white;
      overflow: hidden;
      position: absolute;
      width: 25%;
      height: auto;
      background-color: #6b9697;
      img {
        display: block;
        width: 100%;
      }
    }
  }
}

